rollback refactoring